<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pagina_Area">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F5F5F5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Titulo_Area"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:padding="16dp"
                android:textColor="#42177E"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/txtlado1_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:hint="@string/lado_1area"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/txtlado2_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:hint="@string/lado_2area"
                android:inputType="numberDecimal"/>

            <Button
                android:id="@+id/btncalcular_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_calculoArea"
                android:backgroundTint="#42177E"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/lbladvertencia_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="16dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>